--- a/.github/workflows/commit-stage.yml
+++ b/.github/workflows/commit-stage.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Build, unit tests and integration tests
         run: |
           chmod +x mvnw
-          ./mvnw --file pom.xml
+          ./mvnw clean package --file pom.xml
       - name: Code vulnerability scanning
         uses: anchore/scan-action@v3
         id: scan
