--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.1.4</version>
+        <version>3.1.5</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.polarbookshop</groupId>
@@ -14,13 +14,6 @@
     <name>catalog-service</name>
     <description>Polar Bookstore Catalog Service (Thomas Vitale Book Cloud Native Spring in Action Chapter 2)
     </description>
-    <properties>
-        <java.version>17</java.version>
-        <spring-cloud.version>2022.0.4</spring-cloud.version>
-        <docker.registry>ghcr.io</docker.registry>
-        <docker.user>cortizqgithub</docker.user>
-        <docker.image.name>${docker.registry}/${docker.user}/${project.name}:${project.version}</docker.image.name>
-    </properties>
     <dependencyManagement>
         <dependencies>
             <!-- Spring Cloud -->
@@ -34,6 +27,16 @@
             <!-- END Spring Cloud -->
         </dependencies>
     </dependencyManagement>
+    <properties>
+        <java.version>17</java.version>
+        <spring-cloud.version>2022.0.4</spring-cloud.version>
+
+        <!-- Docker image settings -->
+        <docker.registry>ghcr.io</docker.registry>
+        <docker.user>cortizqgithub</docker.user>
+        <docker.image.name>${docker.registry}/${docker.user}/${project.name}:${project.version}</docker.image.name>
+        <!-- END Docker image settings -->
+    </properties>
     <dependencies>
         <!-- Spring Boot dependencies -->
         <dependency>
@@ -69,12 +72,6 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jdbc</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-devtools</artifactId>
-            <scope>runtime</scope>
-            <optional>true</optional>
         </dependency>
         <!-- END Spring Boot dependencies -->
 
@@ -138,6 +135,7 @@
                 <configuration>
                     <image>
                         <name>${docker.image.name}</name>
+                        <builder>paketobuildpacks/builder-jammy-tiny:latest</builder>
                     </image>
                 </configuration>
             </plugin>
